# compliance-sentinel

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENT_ARCHITECTURE_PATTERNS.md  DOCKER_DEPLOYMENT.md  Dockerfile  LICENSE  MULTI_AGENT_ORCHESTRATION_PATTERNS.md  PRODUCTION_DEPLOYMENT_PATTERNS.md  README.md  STATE_MANAGEMENT_PATTERNS.md  WORKFLOW_INTEGRATION_PATTERNS.md  activate_env.sh  deploy.sh  duckduckgo_mcp_deployment_guide.md  durable_agent_retry.py  enhanced_harvester_agent.py  k8s-deployment.yaml  plan.md  requirements.txt  standalone_mcp_server.py  start_agent.sh  test_enhanced_agent.py  working-chainlit-app.py
dapr-agents/: .gitattributes  .gitignore  CODEOWNERS  COOKBOOK_TODO_LIST.md  GOVERNANCE.md  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml  test_remote_mcp.py  tox.ini
dapr-agents/.devcontainer/: devcontainer.json  post-create.sh
dapr-agents/cookbook/: arxiv_search.ipynb
dapr-agents/cookbook/agents/: basic_oai_agent_react.ipynb
dapr-agents/cookbook/executors/: local.ipynb
dapr-agents/cookbook/graphstores/: neo4j_basic_examples.ipynb
dapr-agents/cookbook/llm/: azure_openai_chat_basic.ipynb  basic-azopenai-chat.prompty  basic-hf-chat.prompty  basic-nvidia-chat.prompty  basic-openai-chat-history.prompty  basic-openai-chat.prompty  elevenlabs_speech_basic.ipynb  hf_chat_basic.ipynb  nvidia_chat_basic.ipynb  nvidia_chat_structured_output.ipynb  nvidia_embeddings_basic.ipynb  openai_audio_basic.ipynb  openai_chat_basic.ipynb  openai_chat_structured_output.ipynb  openai_embeddings_basic.ipynb
dapr-agents/cookbook/vectorstores/: chroma_openai_embeddings.ipynb  chroma_sentencetransformers_all-MiniLM-L6-v2.ipynb  postgres_sentencetransformers_all-MiniLM-L6-v2.ipynb
dapr-agents/dapr_agents/: __init__.py
dapr-agents/dapr_agents/agents/: __init__.py  base.py
dapr-agents/dapr_agents/document/: __init__.py
dapr-agents/dapr_agents/executors/: __init__.py  base.py  docker.py  local.py  sandbox.py
dapr-agents/dapr_agents/llm/: __init__.py  base.py  chat.py
dapr-agents/dapr_agents/memory/: __init__.py  base.py  daprstatestore.py  liststore.py  vectorstore.py
dapr-agents/dapr_agents/prompt/: __init__.py  base.py  chat.py  prompty.py  string.py
dapr-agents/dapr_agents/service/: __init__.py  base.py
dapr-agents/dapr_agents/storage/: __init__.py
dapr-agents/dapr_agents/tool/: __init__.py  base.py  executor.py
dapr-agents/dapr_agents/types/: __init__.py  agent.py  document.py  exceptions.py  executor.py  graph.py  llm.py  message.py  schemas.py  tools.py  workflow.py
dapr-agents/dapr_agents/utils/: __init__.py  signal_handlers.py
dapr-agents/docs/: Dockerfile  index.md
dapr-agents/quickstarts/: README.md
dapr-agents/tests/: README.md  __init__.py  conftest.py  test_signal_handlers.py
(+439 files in other folders)
